// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`visual: TreeNode (workspace agent states) agent state = running — palette + icon match the design 1`] = `
"── visible chars ──
  ● engineer (1 window)
── colour spans ──
row 00: [fg=#7fc8a9 bg=#000000]"● " [fg=#c9cfd4 bg=#000000]"engineer" [fg=#8a9499 bg=#000000]" (1 window)""
`;

exports[`visual: TreeNode (workspace agent states) agent state = stopped — palette + icon match the design 1`] = `
"── visible chars ──
  ◌ engineer [Enter to start]
── colour spans ──
row 00: [fg=#c9cfd4 bg=#000000]"◌ engineer" [fg=#8a9499 bg=#000000]" [Enter to start]""
`;

exports[`visual: TreeNode (workspace agent states) agent state = error — palette + icon match the design 1`] = `
"── visible chars ──
  ⊘ engineer
── colour spans ──
row 00: [fg=#a83838 bg=#000000]"⊘ " [fg=#c9cfd4 bg=#000000]"engineer""
`;

exports[`visual: TreeNode (workspace agent states) agent state = spawning — palette + icon match the design 1`] = `
"── visible chars ──
  ⌛ engineer [stuck — press R to retry]
── colour spans ──
row 00: [fg=#d4a574 bg=#000000]"⌛ " [fg=#c9cfd4 bg=#000000]"engineer" [fg=#8a9499 bg=#000000]" [stuck — press R to retry]""
`;

exports[`visual: TreeNode (workspace agent states) selected agent — accentDim row background + accentBright label 1`] = `
"── visible chars ──
  ● engineer (1 window)
── colour spans ──
row 00: [fg=#7fc8a9 bg=#5a9d82]"● " [fg=#9eddc1 bg=#5a9d82]"engineer" [fg=#8a9499 bg=#5a9d82]" (1 window)""
`;

exports[`visual: AgentPicker empty directory — "No agents registered" message is rendered 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
          ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
          │ Spawn here — new window in session simone                                    │          
          │                                                                              │          
          │ Filter:  (type to narrow)                                                    │          
          │                                                                              │          
          │ No agents registered                                                         │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯
── colour spans ──
row 06: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────────────────────────────────────────────────────╮"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Spawn here" [fg=#8a9499 bg=#0f2638]" — new window in session " [fg=#c9cfd4 bg=#0f2638]"simone" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Filter: " [fg=#5e6e74 bg=#0f2638]"(type to narrow)" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"No agents registered" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────────────────────────────────────────────────────╯""
`;

exports[`visual: AgentPicker populated — three agents listed with first row selected 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
          ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
          │ Spawn here — in window simone:1                                              │          
          │                                                                              │          
          │ Filter:  (type to narrow)                                                    │          
          │                                                                              │          
          │ ▸ engineer                                                                   │          
          │   reviewer                                                                   │          
          │   qa                                                                         │          
          │                                                                              │          
          │  ▶ 'spawn' 'engineer' '--session' 'simone' '--window' 'simone:1'             │          
          │  Enter to run · Esc to cancel                                                │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯
── colour spans ──
row 03: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────────────────────────────────────────────────────╮"
row 04: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 05: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Spawn here" [fg=#8a9499 bg=#0f2638]" — in window " [fg=#c9cfd4 bg=#0f2638]"simone:1" [fg=#7fc8a9 bg=#0f2638]"│"
row 06: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Filter: " [fg=#5e6e74 bg=#0f2638]"(type to narrow)" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▸ " [fg=#9eddc1 bg=#0f2638]"engineer" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"  reviewer" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"  qa" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▶ " [fg=#c9cfd4 bg=#0f2638]"'spawn' 'engineer' '--session' 'simone' '--window' 'simone:1'" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Enter to run · Esc to cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 15: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 16: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────────────────────────────────────────────────────╯""
`;

exports[`visual: AgentPicker filtered — typing "rev" narrows the list to "reviewer" 1`] = `
"── visible chars ──
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
          ╭──────────────────────────────────────────────────────────────────────────────╮          
          │                                                                              │          
          │ Spawn here — in window simone:1                                              │          
          │                                                                              │          
          │ Filter: rev                                                                  │          
          │                                                                              │          
          │ ▸ reviewer                                                                   │          
          │                                                                              │          
          │  ▶ 'spawn' 'reviewer' '--session' 'simone' '--window' 'simone:1'             │          
          │  Enter to run · Esc to cancel                                                │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯
── colour spans ──
row 04: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────────────────────────────────────────────────────╮"
row 05: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 06: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Spawn here" [fg=#8a9499 bg=#0f2638]" — in window " [fg=#c9cfd4 bg=#0f2638]"simone:1" [fg=#7fc8a9 bg=#0f2638]"│"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#8a9499 bg=#0f2638]"Filter: " [fg=#c9cfd4 bg=#0f2638]"rev" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▸ " [fg=#9eddc1 bg=#0f2638]"reviewer" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"▶ " [fg=#c9cfd4 bg=#0f2638]"'spawn' 'reviewer' '--session' 'simone' '--window' 'simone:1'" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Enter to run · Esc to cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 15: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────────────────────────────────────────────────────╯""
`;

exports[`visual: QuitDialog default — overlay + bordered panel + "Quit genie?" prompt 1`] = `
"── visible chars ──
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                  ┌───────────────────────────────────────────┐                 
                  │                                           │                 
                  │                Quit genie?                │                 
                  │                                           │                 
                  │      Enter to quit  |  Esc to cancel      │                 
                  │                                           │                 
                  │   Hint: Ctrl+D to detach (keep running)   │                 
                  │                                           │                 
                  └───────────────────────────────────────────┘
── colour spans ──
row 06: [fg=#7fc8a9 bg=#0f2638]"┌───────────────────────────────────────────┐"
row 07: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 08: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"Quit genie?" [fg=#7fc8a9 bg=#0f2638]"│"
row 09: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 10: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#c9cfd4 bg=#0f2638]"Enter" [fg=#8a9499 bg=#0f2638]" to quit " [fg=#5e6e74 bg=#0f2638]" | " [fg=#c9cfd4 bg=#0f2638]" Esc" [fg=#8a9499 bg=#0f2638]" to cancel" [fg=#7fc8a9 bg=#0f2638]"│"
row 11: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 12: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#5e6e74 bg=#0f2638]"Hint: Ctrl+D to detach (keep running)" [fg=#7fc8a9 bg=#0f2638]"│"
row 13: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#7fc8a9 bg=#0f2638]"│"
row 14: [fg=#7fc8a9 bg=#0f2638]"└───────────────────────────────────────────┘""
`;

exports[`visual: ContextMenu running agent menu — five items with bordered overlay 1`] = `
"── visible chars ──
╭──────────────────────────────╮                                                
│ ▶ Clone  N                   │                                                
│   New window  W              │                                                
│   Spawn into…  I             │                                                
│   Rename...  R               │                                                
│   Remove  K                  │                                                
╰──────────────────────────────╯
── colour spans ──
row 00: [fg=#7fc8a9 bg=#0f2638]"╭──────────────────────────────╮"
row 01: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#9eddc1 bg=#5a9d82]"▶ Clone  N" [fg=#7fc8a9 bg=#0f2638]"│"
row 02: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   New window  W              " [fg=#7fc8a9 bg=#0f2638]"│"
row 03: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   Spawn into…  I             " [fg=#7fc8a9 bg=#0f2638]"│"
row 04: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   Rename...  R               " [fg=#7fc8a9 bg=#0f2638]"│"
row 05: [fg=#7fc8a9 bg=#0f2638]"│" [fg=#ffffff bg=#1a1a1a]"   Remove  K                  " [fg=#7fc8a9 bg=#0f2638]"│"
row 06: [fg=#7fc8a9 bg=#0f2638]"╰──────────────────────────────╯""
`;
